# arcade

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitignore  CMakeLists.txt
.github/workflows/: built-and-lint.yaml  mirror.yaml
assets/pacman/: pacman_map.txt
doc/: architecture.md
doc/lib/game/menu/: MENU.md
lib/: CMakeLists.txt
lib/game/menu/: CMakeLists.txt  menu.hpp
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  CoreContext.hpp  Registry.hpp  core.cpp  core.hpp
src/core/LibManager/: libManager.cpp  libManager.hpp
src/core/Menu/: menu.cpp  menu.hpp
src/core/SystemCommand/: systemCommand.cpp  systemCommand.hpp
src/core/dlLoader/: dlLoader.cpp  dlLoader.hpp
src/display/sdl2/: CMakeLists.txt  SDL2Display.cpp  SDL2Display.hpp  SDLWrappers.hpp
src/lib/: CMakeLists.txt
src/lib/display/ncurses/: CMakeLists.txt  ncursesDisplay.cpp  ncursesDisplay.hpp
src/lib/display/ncurses/ncurses/: ncurses.cpp  ncurses.hpp
src/lib/display/sdl2/: CMakeLists.txt  SDL2Display.cpp  SDL2Display.hpp
src/lib/display/sdl2/constants/: SDL2Constants.hpp
src/lib/display/sdl2/wrapper/: SDL2Renderer.cpp  SDL2Renderer.hpp
src/lib/display/sfml/: CMakeLists.txt  sfmlDisplay.cpp  sfmlDisplay.hpp
src/lib/display/sfml/constants/: sfmlConstants.hpp
src/lib/display/sfml/wrapper/: sfmlRenderer.cpp  sfmlRenderer.hpp
src/lib/game/: Scene.hpp
src/lib/game/menu/: CMakeLists.txt  menu.cpp  menu.hpp  scene.hpp
src/lib/game/pacman/: CMakeLists.txt  checkCollision.cpp  createEntities.cpp  map.cpp  map.hpp  moveEntities.cpp  movePlayer.cpp  pacman.cpp  pacman.hpp
src/lib/game/pacman/AI/: pathfinder.cpp  pathfinder.hpp
src/lib/game/pacman/AI/ghostMovement/: ghostMovement.cpp  ghostMovement.hpp
src/lib/game/pacman/AI/pathfinder/: node.hpp  pathfinder.cpp  pathfinder.hpp
src/lib/game/pacman/utils/: utils.cpp  utils.hpp
src/lib/game/snake/: CMakeLists.txt  EntityFactory.cpp  EntityFactory.hpp  snake.cpp  snake.hpp  snakeEntities.cpp  snakeFood.cpp  snakeMovement.cpp
src/shared/: Entity.hpp  IDisplay.hpp  IGame.hpp  Input.hpp  Position.hpp  Sound.hpp  Text.hpp
src/shared/abstract/: ADisplay.hpp  AGame.hpp
src/shared/interface/: IDisplay.hpp  IGame.hpp  IGameContext.hpp
